--- a/src/Componentes/Home/Home.modules.css
+++ b/src/Componentes/Home/Home.modules.css
@@ -9,16 +9,16 @@ body .wrapper {
   color: green;
 }
 
-a,
+/* a,
 a:hover,
 a:focus {
   color: inherit;
   text-decoration: none;
   transition: all 0.3s;
-}
+} */
 
 #sidebar {
-  background: black;
+  background: rgb(39, 35, 35);
   color: #fafafa;
   transition: all 0.3s;
 }
@@ -28,6 +28,9 @@ a:focus {
   padding: 10px;
   font-size: 1.1em;
   display: block;
+  color: green;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 #sidebar ul li a:hover {
@@ -99,29 +102,8 @@ body {
   padding: 5px;
 }
 
-
 .tabela th {
   padding: 5px;
-}
-
-.nav-bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  font-family: 'Poppins', sans-serif;
-  background: black;
-  height: 10vh;
-}
-
-.nav-list {
-  list-style: none;
-  display: flex;
-}
-
-.nav-list li {
-  color: white;
-  letter-spacing: 3px;
-  margin-left: 32px;
 }
 
 
