--- a/src/Componentes/Menu/Menu.modules.css
+++ b/src/Componentes/Menu/Menu.modules.css
@@ -5,20 +5,26 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
-    background: rgb(56, 52, 52);
+    font-family: 'Poppins', sans-serif;
+    background: rgb(57, 54, 54);
     height:10vh;
 }
-  
-.nav_list {
+
+.nav-list {
     list-style: none;
     display: flex;
 }
   
-.nav_list li {
+.nav_bar li {
     color: white;
     letter-spacing: 3px;
     margin-left: 32px;
+}
+
+.a_menu{
+    color: green;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 
